# lex-bedrock-agent-kb

./: .gitignore  README.md  README.update.md  app-config.json.template  cdk.json  env.json  package-lock.json  package.json  tsconfig.json
computer_use/: Dockerfile  README.md  computer_use.md  entrypoint.sh
computer_use/app/: computer_use.py  requirements.txt
computer_use/app/tint2/: tint2rc
lambda/action-group/: index.py
lambda/lex-fallback/: index.py
lib/: bedrock-kb-stack.ts  lex-bedrock-agent-kb-stack.ts  lex-bot-stack.ts  s3-datasource-stack.ts
lib/constructs/bedrock-agent-kb/: bedrock-agent-construct.ts  bedrock-agent-stack.ts  bedrock-guardrail.json  bedrock-kb-agent-stack.ts  bedrock-kb-construct.ts  restaurant-booking.json
lib/constructs/bedrock-agent-kb/lambda/gutendex-action-group/: index.py
lib/constructs/bedrock-agent-kb/lambda/restaurant-booking-action-group/: index.py  pyproject.toml
lib/constructs/lex-bot/: lex-bot-construct.ts
lib/constructs/lex-bot/lambda/lex-fallback/: index.py
notebooks/: computer_use.ipynb
restaurant_planner/restaurant-finder-openapi/: index.py  pyproject.toml  restaurant-finder.json
restaurant_planner/restaurant-management-openapi/: index.py  pyproject.toml  restaurant-booking.json
scripts/: load-kb.sh
test/: lex-bedrock-agent-kb.test.ts
