[tool.poetry]
name = "restaurant-finder-openapi"
version = "0.1.0"
description = ""
authors = ["Richard Kang <richard@doit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
serpapi = "^0.1.5"
google-search-results = "^2.4.2"

[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = "^3.3.0"
aws-xray-sdk = "^2.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
