[tool.poetry]
name = "restaurant-booking-action-group"
version = "0.1.0"
description = ""
authors = ["Richard Kang <richard@doit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.0"
aws-lambda-powertools = "^3.3.0"
aws-xray-sdk = "^2.14.0"

[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = "^3.3.0"
aws-xray-sdk = "^2.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
